tests/parser-test-files/bad-files/parse-while.2.error
error: Malformed while expression
  --> test:4:22
   |
 4 |  (define f (while false))
   |                        ^ expected body
